--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             z-index: 1;
         }
 
-        /* 캐릭터 */
+        /* 캐릭터 컨테이너: 말풍선 위치의 기준점이 됩니다 */
         .character-container {
             position: absolute;
             bottom: 15%;
@@ -55,7 +55,7 @@
             transition: transform 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275);
             filter: drop-shadow(0 0 10px rgba(0,0,0,0.5));
             display: flex;
-            align-items: flex-end;
+            align-items: flex-end; /* 이미지는 바닥에 정렬 */
             justify-content: center;
         }
 
@@ -94,63 +94,70 @@
             z-index: 4;
         }
 
-        /* 말풍선 스타일 개선 */
+        /* 말풍선 위치 수정: 캐릭터 머리 위 */
         .bubble-area {
             position: absolute;
-            top: 15%;
-            width: 320px;
-            z-index: 50; /* Z-index 높임 */
+            bottom: 90%; /* 캐릭터 컨테이너의 상단(머리 부근)에 위치 */
+            left: 50%;
+            width: 300px;
+            z-index: 50;
             opacity: 0;
-            transition: opacity 0.3s ease, transform 0.3s ease;
-            transform: scale(0.9);
-            pointer-events: none; /* 클릭 방해 금지 */
+            /* 중앙 정렬 및 초기 축소 상태 */
+            transform: translateX(-50%) scale(0.8);
+            transform-origin: bottom center; /* 아래쪽 중심으로 커지게 */
+            transition: opacity 0.3s ease, transform 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+            pointer-events: none;
+            display: flex;
+            justify-content: center;
+        }
+
+        /* 말풍선 활성화 클래스 */
+        .bubble-area.active {
+            opacity: 1 !important;
+            transform: translateX(-50%) scale(1);
         }
 
         .bubble {
             background: white;
-            padding: 1.5rem;
+            padding: 1.2rem;
             border-radius: 20px;
             border: 3px solid #000;
             font-family: 'Jua', sans-serif;
-            font-size: 1.3rem;
-            line-height: 1.4;
+            font-size: 1.2rem;
+            line-height: 1.3;
             color: #333;
-            box-shadow: 8px 8px 0px rgba(0,0,0,0.2);
+            box-shadow: 5px 5px 0px rgba(0,0,0,0.2);
             position: relative;
-            word-break: keep-all; /* 단어 단위 줄바꿈 */
+            text-align: center;
+            word-break: keep-all;
+            background-color: #fff;
         }
 
-        #pc1-bubble { left: 15%; }
-        #pc2-bubble { right: 15%; }
-
+        /* 말풍선 꼬리 (중앙 하단) */
         .bubble::after {
             content: '';
             position: absolute;
-            bottom: -20px;
+            bottom: -18px;
+            left: 50%;
+            transform: translateX(-50%);
             width: 0;
             height: 0;
-            border-width: 20px 15px 0;
+            border-width: 18px 12px 0;
             border-style: solid;
             border-color: #000 transparent transparent transparent;
         }
         .bubble::before {
             content: '';
             position: absolute;
-            bottom: -13px;
+            bottom: -12px;
+            left: 50%;
+            transform: translateX(-50%);
             width: 0;
             height: 0;
-            border-width: 20px 15px 0;
+            border-width: 18px 12px 0;
             border-style: solid;
             border-color: #fff transparent transparent transparent;
             z-index: 1;
-        }
-
-        #pc1-bubble .bubble::after, #pc1-bubble .bubble::before { left: 20%; }
-        #pc2-bubble .bubble::after, #pc2-bubble .bubble::before { right: 20%; }
-
-        .bubble.active {
-            opacity: 1 !important;
-            transform: scale(1) translateY(-10px);
         }
 
         /* UI 패널 */
@@ -373,22 +380,25 @@
         <div class="table-surface"></div>
         <div class="center-line"></div>
 
-        <!-- 캐릭터 -->
+        <!-- 캐릭터 및 말풍선 (캐릭터 컨테이너 안에 말풍선을 포함시킴) -->
         <div id="pc1-container" class="character-container">
+            <!-- 말풍선 -->
+            <div id="pc1-bubble" class="bubble-area">
+                <div class="bubble" id="p1-text">...</div>
+            </div>
+            <!-- 캐릭터 이미지 -->
             <img id="img-pc1" src="pc1.png" class="character-img" alt="Player" 
                  onerror="handleImageError(this, 'pc1')">
         </div>
+
         <div id="pc2-container" class="character-container">
+            <!-- 말풍선 -->
+            <div id="pc2-bubble" class="bubble-area">
+                <div class="bubble" id="p2-text">...</div>
+            </div>
+            <!-- 캐릭터 이미지 -->
             <img id="img-pc2" src="pc2.png" class="character-img" alt="Rival" 
                  onerror="handleImageError(this, 'pc2')">
-        </div>
-
-        <!-- 말풍선 (ID 수정 및 스타일 적용 확인) -->
-        <div id="pc1-bubble" class="bubble-area">
-            <div class="bubble" id="p1-text">...</div>
-        </div>
-        <div id="pc2-bubble" class="bubble-area">
-            <div class="bubble" id="p2-text">...</div>
         </div>
 
         <!-- 케이크 -->
@@ -605,8 +615,7 @@
 
                 if (gameState.p2Hp <= 0) {
                     showBubble('pc2', "으으... (멘탈 붕괴)");
-                    gameState.p2Hp += 30; // 보너스 회복? 혹은 게임 오버? (현재 룰은 0이하면 패배이므로 이 로직 도달하기 전에 패배 처리됨. 하지만 예외 처리)
-                    // 승리 조건 체크가 executeAction에서 일어나므로 여기서는 그냥 둠
+                    gameState.p2Hp += 30; // 보너스 회복
                 }
 
                 executeAction('ai', actionType);
@@ -727,10 +736,7 @@
 
             // 턴이 바뀌거나 일정 시간 후 사라짐
             setTimeout(() => {
-                // 현재 턴이 아닌 사람의 말풍선은 닫음
-                // if ((who === 'pc1' && gameState.turn === 'ai') || (who === 'pc2' && gameState.turn === 'player')) {
-                    bubbleArea.classList.remove('active');
-                // }
+                // bubbleArea.classList.remove('active'); // 원하면 주석 해제하여 자동 닫힘
             }, 2500);
         }
 
